<resources>
    <string name="app_name">Beero</string>
    <string name="google_map_api_key">AIzaSyD3KE5y5-9CKemBgeK2plmV6Asj38P8JbA</string>
    <string name="file_name_string">(%s)</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sorry">Sorry.</string>
    <string name="sorry_title">Your Location Is Not\nSupported Just Yet.</string>
    <string name="sorry_msg">Beero is currently only available in the\nSydney Northern Beaches area. We’re\nworking hard on getting Beero happening\neverywhere, but for now, please check\nback regularly.</string>
    <string name="ERROR_NETWORK">Network Error</string>
    <string name="done">DONE</string>
    <string name="brand_title">WHICH BEERS ARE YOU?</string>
    <string name="my_beers">MY BEERS</string>
    <string name="all_beers">ALL BEERS</string>
    <string name="finding">Finding beers&#8230;</string>
    <string name="cases">CASES</string>
    <string name="six_pack">SIX PACKS</string>
    <string name="bottle">BOTTLES/CANS</string>
    <string name="cans">CANS</string>
    <string name="bottles">BOTTLES</string>
    <string name="both">BOTTLES AND CANS</string>
    <string name="refresh">Refresh</string>
    <string name="add_beers">Add beers</string>
    <string name="select_brand_warning">Please select at least one brand!</string>
    <string name="price_format">$ %s</string>
    <string name="distance_format">, %s mins away</string>
    <string name="distance_drive_format">%s mins drive,&#160;</string>
    <string name="container_format" formatted="false">%s x %sml %s</string>
    <string name="no_deal">No deal found!</string>
    <string name="cancel_txt">Cancel</string>
    <string name="ok_txt">Ok</string>
    <string name="verify_stock">VERIFIED IN STOCK</string>
    <string name="call">Call Store</string>
    <string name="catalog">Catalog</string>
    <string name="remove">REMOVE</string>
    <string name="exclusive_price">BEERO EXCLUSIVE PRICE!</string>
    <string name="exclusive_msg">Show Beero at the register to get this deal</string>
    <string name="best_deals">Best of %s nearby deals</string>
    <string name="allow_location_services_waring">Allow "Beero" to access your location while you use the app?</string>
    <string name="allow">Allow</string>
    <string name="price_per_litre">$%s per litre</string>
    <string name="beero_member">Beero member\nsince August 2015</string>
    <string name="opening_hours">Store Opening Hours</string>
    <string name="check_catalog">For more great details, check out our catalog!</string>
    <!--  <string name="time_remaining_format" formatted="false">Closes in %s hours %s minutes</string>-->
    <string name="time_remaining_format">Closes in %s minutes</string>
    <string name="default_welcome">Hi, I’m Colin, manager of the Lachlan\nHotel bottle shop. If you need any advice\non wines, I’m here to help!</string>
    <string name = "no_phone_available">No phone number is available!</string>
    <string name = "no_phone_call_available">Phone call is not available on your device!</string>
    <string name="no_catalog">No catalog available!</string>
    <string name = "cover_url">http://beero.com.au/stores/%s/files/cover.jpg</string>
    <string name = "catalog_url">http://beero.com.au/stores/%s/files/catalog.png</string>
    <string name = "catalog_pdf_url">http://beero.com.au/stores/%s/files/catalog.pdf</string>


</resources>
