<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_aap_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/com_10dp"
        android:paddingTop="@dimen/com_10dp">

        <TextView
            android:id="@+id/my_beer"
            style="@style/MainTextView"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/my_beers" />

        <TextView
            android:id="@+id/sorry_title"
            style="@style/MainTextView"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/all_beers" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/logo_search_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_search_background" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/com_15dp"
            android:src="@drawable/logo_search_beer" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_search_container"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/finding"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/com_10dp"
        android:paddingTop="@dimen/com_10dp">

        <TextView
            android:id="@+id/package_condition"
            style="@style/MainTextView"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:drawableRight="@drawable/arrow_up"
            android:text="@string/cases" />

        <TextView
            android:id="@+id/container_condition"
            style="@style/MainTextView"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:drawableRight="@drawable/arrow_up"
            android:text="@string/bottle" />
    </LinearLayout>

</RelativeLayout>