<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|right"
    android:layout_marginBottom="@dimen/com_50dp"
    android:background="@android:color/transparent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="bottom"
    android:clickable="true"
    android:visibility="gone">

    <TextView
        android:id="@+id/cans_btn"
        style="@style/SearchCondition"
        android:text="@string/cans" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/cans_btn"
        android:background="#b96e1c" />

    <TextView
        android:id="@+id/bottle_btn"
        style="@style/SearchCondition"
        android:layout_below="@+id/separator"
        android:text="@string/bottles" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/bottle_btn"
        android:background="#b96e1c" />

    <TextView
        android:id="@+id/both_btn"
        style="@style/SearchCondition"
        android:layout_below="@+id/separator2"
        android:text="@string/both" />


    <ImageView
        android:id="@+id/arrow_down_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/both_btn"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/com_50dp"
        android:src="@drawable/arrow_down" />

</RelativeLayout>