<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/verified_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_bg"
        android:gravity="center"
        android:padding="@dimen/com_15dp"
        android:text="@string/verify_stock"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verified_txt"
        android:layout_marginBottom="@dimen/com_15dp"
        android:layout_marginLeft="@dimen/com_20dp"
        android:layout_marginTop="@dimen/com_20dp"
        android:text="Lachlan Hotel"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/store_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/store_name"
        android:layout_marginLeft="@dimen/com_20dp"
        android:text="168 Midson"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/store_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/store_address"
        android:layout_marginLeft="@dimen/com_20dp"
        android:text="11 mins drive"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/store_opening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/store_distance"
        android:layout_marginLeft="@dimen/com_20dp"
        android:layout_marginTop="@dimen/com_10dp"
        android:drawableLeft="@drawable/mark_open_large"
        android:drawablePadding="@dimen/com_10dp"
        android:gravity="center"
        android:text="Opening"
        android:textColor="@color/green_bg"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/store_distance"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/com_30dp"
        android:src="@drawable/arrow_right_dark" />

    <RelativeLayout
        android:id="@+id/contact_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/com_60dp"
        android:layout_below="@+id/store_opening"
        android:layout_marginTop="@dimen/com_30dp"
        android:background="@color/grey_bg"
        android:gravity="center"
        android:paddingBottom="1dp"
        android:paddingTop="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/separator"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/icon_phone"
                android:drawablePadding="@dimen/com_10dp"
                android:gravity="center"
                android:text="@string/call"
                android:textColor="@color/main_aap_color"
                android:textSize="18sp" />
        </LinearLayout>


        <View
            android:id="@+id/separator"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/grey_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/separator"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_beer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/icon_catalog"
                android:drawablePadding="@dimen/com_10dp"
                android:gravity="center"
                android:text="@string/catalog"
                android:textColor="@color/main_aap_color"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_container">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/product_img"
            android:layout_width="@dimen/com_60dp"
            android:layout_height="@dimen/com_150dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/com_10dp"
            android:src="@drawable/beer_folder_smooth" />

        <RelativeLayout
            android:id="@+id/exclusive_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_img"
            android:layout_marginLeft="@dimen/com_20dp"
            android:layout_marginRight="@dimen/com_20dp"
            android:background="@drawable/exclusive_bg"
            android:padding="@dimen/com_10dp">

            <TextView
                android:id="@+id/exclusive_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exclusive_price"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/exclusive_price"
                android:text="@string/exclusive_msg"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>