<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:paddingTop="?android:attr/actionBarSize">

    <TextView
        android:id="@+id/verified_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_bg"
        android:gravity="center"
        android:padding="@dimen/com_10dp"
        android:text="@string/verify_stock"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/store_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verified_txt"
        android:paddingBottom="@dimen/com_10dp"
        android:background="@drawable/item_click_selector">

        <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/com_5dp"
            android:layout_marginLeft="@dimen/com_20dp"
            android:layout_marginTop="@dimen/com_10dp"
            android:text="Lachlan Hotel"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/store_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/store_name"
            android:layout_marginLeft="@dimen/com_20dp"
            android:text="168 Midson"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/store_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/store_address"
            android:layout_marginLeft="@dimen/com_20dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/store_opening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_address"
            android:layout_toRightOf="@+id/store_distance"
            android:drawablePadding="@dimen/com_10dp"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/store_closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_address"
            android:layout_toRightOf="@+id/store_distance"
            android:drawablePadding="@dimen/com_10dp"
            android:gravity="center"
            android:text="closed"
            android:textColor="@color/main_aap_color"
            android:textSize="16sp"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/com_30dp"
            android:src="@drawable/arrow_right_dark"/>
    </RelativeLayout>

    <com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView
        android:id="@+id/contact_container"
        style="@style/ms9_DefaultShadowStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_container"
        app:ms9_affectsDisplayedPosition="true"
        app:ms9_ambientShadowDrawablesList="@array/ms9_ambient_shadow_drawables_z18"
        app:ms9_forceUseCompatShadow="true"
        app:ms9_shadowElevation="4dp"
        app:ms9_shadowTranslationZ="2dp"
        app:ms9_spotShadowDrawablesList="@array/ms9_spot_shadow_drawables_z18"
        app:ms9_useAmbientShadow="true"
        app:ms9_useSpotShadow="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/com_50dp"
            android:layout_below="@+id/store_container"
            android:layout_marginBottom="@dimen/com_2dp"
            android:layout_marginTop="@dimen/com_2dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/separator"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/call"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:drawableLeft="@drawable/icon_phone"
                    android:drawablePadding="@dimen/com_10dp"
                    android:gravity="center"
                    android:text="@string/call"
                    android:textColor="@color/main_aap_color"
                    android:textSize="18sp"/>
            </LinearLayout>


            <View
                android:id="@+id/separator"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/grey_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/separator"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/catalog"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:drawableLeft="@drawable/icon_catalog"
                    android:drawablePadding="@dimen/com_10dp"
                    android:gravity="center"
                    android:text="@string/catalog"
                    android:textColor="@color/main_aap_color"
                    android:textSize="18sp"/>
            </LinearLayout>
        </RelativeLayout>
    </com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView>

    <!--<com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView
        android:id="@+id/contact_container_11"
        style="@style/ms9_DefaultShadowStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_container"
        app:ms9_affectsDisplayedPosition="true"
        app:ms9_forceUseCompatShadow="true"
        app:ms9_shadowElevation="2dp"
        app:ms9_shadowTranslationZ="4dp"
        app:ms9_useAmbientShadow="true"
        app:ms9_useSpotShadow="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/com_5dp"
            android:background="@android:color/white"
            android:orientation="vertical">

        </LinearLayout>

    </com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView>-->

    <RelativeLayout
        android:id="@+id/deal_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/show_loosing_shadow"
        android:layout_below="@+id/contact_container"
        android:padding="@dimen/com_20dp">

        <RelativeLayout
            android:id="@+id/deal_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/exclusive_container"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/product_img"
                android:layout_width="@dimen/com_150dp"
                android:layout_height="@dimen/com_150dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/product_img"
                android:gravity="center">

                <TextView
                    android:id="@+id/product_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/main_aap_color"
                    android:textSize="18sp"/>


                <TextView
                    android:id="@+id/product_price_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/product_container"
                    android:textSize="35sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/product_price_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/product_container"
                    android:layout_toRightOf="@+id/product_price_big"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </RelativeLayout>


        </RelativeLayout>


        <FrameLayout
            android:id="@+id/exclusive_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-30dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/com_30dp"
                android:background="@drawable/exclusive_bg"
                android:padding="@dimen/com_10dp">

                <TextView
                    android:id="@+id/exclusive_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exclusive_price"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/exclusive_price"
                    android:text="@string/exclusive_msg"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:src="@drawable/badge_exclusive_large"/>
        </FrameLayout>

    </RelativeLayout>

    <com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView
        android:id="@+id/show_loosing_shadow"
        style="@style/ms9_DefaultShadowStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:ms9_shadowElevation="2dp"
        app:ms9_shadowTranslationZ="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/com_5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/show_loosing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawableRight="@drawable/arrow_right_dark"
                android:gravity="center_vertical"
                android:padding="@dimen/com_10dp"
                android:textColor="@color/main_aap_color"
                android:textSize="20sp"/>
        </LinearLayout>
    </com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView>
</RelativeLayout>
